Update pagination for searching for a person endpoint
This improves pagination by removing unnecessary properties, duplicated
values and adding more meaningful property names.

It also updates our OpenAPI spec.
